@@ -1,5 +1,17 @@
 2008-09-08  Jerome Guitton  <guitton@adacore.com>
 
+	* gdb.arch/powerpc-aix-prologue.c (stack_check_probe_1)
+	(stack_check_probe_2, stack_check_probe_loop_1)
+	(stack_check_probe_loop_2): New functions.
+	(main): Add call to these new functions.
+	* gdb.arch/powerpc-aix-prologue.exp: When breaking on these
+	functions, check that the breakpoint is inserted at the appropriate
+	location.
+	(insert_breakpoint): Slightly refine this procedure so that it can
+	be called several times in the test.
+
+2008-09-08  Jerome Guitton  <guitton@adacore.com>
+
 	* gdb.base/stack-checking.c: New file.
 	* gdb.base/stack-checking.exp: New file.
 
